--- a/templates/networking/networking.yaml
+++ b/templates/networking/networking.yaml
@@ -37,6 +37,9 @@ Resources:
 
   InternetGateway:
     Type: AWS::EC2::InternetGateway
+    Tags:
+      - Key: Name
+        Value: "IGW-Network"
 
   AttachInternetGateway:
     Type: AWS::EC2::VPCGatewayAttachment
