--- a/templates/security/security.yaml
+++ b/templates/security/security.yaml
@@ -84,11 +84,11 @@ Outputs:
     Export:
       Name: !Sub "${AWS::StackName}-FirewallSubnet2EndpointId"
 
-  RdsFirewallSubnetId:
+  RdsFirewallSubnetEndpointId:
     Description: "AWS Network Firewall Subnet1 Endpoint ID"
     Value: !Select [2, !GetAtt NetworkFirewall.EndpointIds]
     Export:
-      Name: !Sub "${AWS::StackName}-RdsFirewallSubnetId"
+      Name: !Sub "${AWS::StackName}-RdsFirewallSubnetEndpointId"
 
   FirewallPolicyArn:
     Description: "AWS Network Firewall Policy ARN"
