--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -27,4 +27,4 @@ jobs:
           chmod +x deployment/deploy-stack.sh
           ./deployment/deploy-stack.sh networking
           ./deployment/deploy-stack.sh security
-          ./deployment/deploy-stack.sh routes
+          #./deployment/deploy-stack.sh routes
