--- a/templates/routes/routes.yaml
+++ b/templates/routes/routes.yaml
@@ -11,6 +11,9 @@ Parameters:
   RdsNetworkInterfaceCIDR:
     Type: String
     Description: "CIDR block for the RDS Network Interface subnet"
+  FirewallSubnet1EndpointId:
+    Type: String
+    Default: !ImportValue security-FirewallSubnet1EndpointId
 
 Resources:
   # Route Table for Firewall Subnet 1 (AZ1)
@@ -115,7 +118,7 @@ Resources:
     Properties:
       RouteTableId: !Ref CustomerRouteTable1
       DestinationCidrBlock: "0.0.0.0/0"
-      VpcEndpointId: !ImportValue security-FirewallSubnet1EndpointId
+      VpcEndpointId: !Ref FirewallSubnet1EndpointId
 
   CustomerRoute2:
     Type: AWS::EC2::Route
