--- a/templates/security/security.yaml
+++ b/templates/security/security.yaml
@@ -76,7 +76,8 @@ Outputs:
 
   FirewallSubnet1EndpointId:
     Description: "AWS Network Firewall Subnet1 Endpoint ID"
-    Value: !Select [0, !GetAtt NetworkFirewall.EndpointIds]
+    #Value: !Select [0, !GetAtt NetworkFirewall.EndpointIds]
+    Value: Fn::Select [0, !GetAtt [NetworkFirewall, subnetMappings]]
     Export:
       Name: !Sub "${AWS::StackName}-FirewallSubnet1EndpointId"
 
